// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button active button 1`] = `
<div>
  <button
    class="css-2wj85a-test"
  >
    Button
  </button>
</div>
`;

exports[`Button border button 1`] = `
<div>
  <button
    class="css-2wj85a-test"
  >
    Button
  </button>
</div>
`;

exports[`Button large button 1`] = `
<div>
  <button
    class="css-1vu1mz8-test"
  >
    Button
  </button>
</div>
`;

exports[`Button loading button 1`] = `
<div>
  <button
    class="css-2wj85a-test"
    type="button"
  >
    <span
      class="css-9q8ohv"
    />
  </button>
</div>
`;
